--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="tk.zabozhanov.SharamVKSharing"
-          android:versionCode="4"
-          android:versionName="1.2">
+          android:versionCode="6"
+          android:versionName="1.4">
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-sdk android:minSdkVersion="14"/>
     <application
             android:name=".App"
